# MinWeb2025-blogging-platform-backend

./: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  fly.toml
.github/workflows/: pr-branch-check.yml
debug_api/: article.http  articles.http  users.http
src/: db.rs  lib.rs  main.rs
src/domain/: mod.rs
src/domain/models/: article.rs  article_query.rs  article_service.rs  mod.rs  user.rs  user_name.rs  user_service.rs
src/domain/repositorys/: article_repository.rs  mod.rs  user_repository.rs
src/infrastructure/: article_repository.rs  inmemory_article_repository.rs  inmemory_user_repository.rs  mod.rs  mongo_article_repository.rs  mongo_client.rs  mongo_user_repository.rs
src/presentation/handlers/: article_handler.rs  create_handler.rs  mod.rs  user_handler.rs  util.rs
src/usecase/: article_usecase.rs  mod.rs  user_usecase.rs
